test/sidecar/config/gateway/llmroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: inference-gateway
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: qwen2-0-5b
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 300s
